# nim

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile.am  Makefile.in  README.md  TODO.md  autogen  chasm.c  configure  configure.ac  main.c
examples/: 1-prod-N-cons.chimp  _uv_tcp.chimp  _uv_tcp.nim  compiler.chimp  compiling.chimp  compiling.nim  concfib.chimp  concfib.nim  fib.chimp  fib.nim  helloworld.chasm  helloworld.chimp  helloworld.nim  net.chimp  patternmatch.chimp  pingpong.chimp  producer-consumer.chimp  producer-consumer.nim  range.chimp  sandbox.chimp  sandbox.nim  self.nim  tasks.chimp  tasks.nim  using.chimp  using.nim
libchimp/: Makefile.am  Makefile.in  _parser.y  array.c  class.c  code.c  compile.c  core.c  error.c  float.c  frame.c  gc.c  hash.c  int.c  lwhash.c  method.c  module.c  module_mgr.c  msg.c  object.c  scanner.l  stackframe.c  str.c  symtable.c  task.c  test.c  var.c  vm.c
libchimp/include/: chimp.h
libchimp/include/chimp/: _parser_ext.h  any.h  array.h  class.h  code.h  compile.h  core.h  error.h  float.h  frame.h  gc.h  hash.h  int.h  lwhash.h  method.h  module.h  module_mgr.h  modules.h  msg.h  object.h  stackframe.h  str.h  symtable.h  task.h  test.h  var.h  vm.h
libchimp/modules/: assertmod.c  chimpunit.c  chimpunitmod.c  compiler.c  gc.c  gcmod.c  io.c  iomod.c  net.c  os.c  osmod.c
libchimp/modules/_uv/: _uv.c
libchimp/modules/http/: http.c
libnim/: _parser.y  array.c  class.c  code.c  compile.c  core.c  error.c  float.c  frame.c  gc.c  hash.c  int.c  lwhash.c  method.c  module.c  module_mgr.c  msg.c  object.c  scanner.l  str.c  symtable.c  task.c  var.c  vm.c
libnim/include/: nim.h
libnim/include/nim/: _parser_ext.h  any.h  array.h  class.h  code.h  compile.h  core.h  error.h  float.h  frame.h  gc.h  hash.h  int.h  lwhash.h  method.h  module.h  module_mgr.h  modules.h  msg.h  object.h  str.h  symtable.h  task.h  var.h  vm.h
libnim/modules/: assert.c  gc.c  io.c  net.c  nimunit.c  os.c
libnim/modules/http/: http.c
script/: astgen  ddd  gdb  gdb-test  runner.chimp  runner.nim  test  testgen  valgrind
test/: arithmetic_test.chimp  arithmetic_test.nim  array_test.chimp  array_test.nim  bool_test.chimp  bool_test.nim  conditional.chimp  conditional_test.chimp  conditional_test.nim  core.c  expressions_test.chimp  expressions_test.nim  functions_test.chimp  functions_test.nim  hash_test.chimp  hash_test.nim  looping_test.chimp  looping_test.nim  os_test.chimp  os_test.nim  pattern_matching_test.chimp  pattern_matching_test.nim  range_test.chimp  range_test.nim  special_test.chimp  special_test.nim  string_test.chimp  string_test.nim  task_test.chimp  task_test.nim  test.chimp  test_class.c  test_core.c  test_str.c
vim/syntax/: chimp.vim  nim.vim
